--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "styled-components": "^6.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.2.16",
+    "@types/react-dom": "^18.2.7",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
@@ -29,6 +30,7 @@
     "postcss": "^8.4.26",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
     "vite": "^4.4.0"
   }
 }
